<resources>
    <string name="app_name">AppBar приложения</string>
    <string name="open_netbook">Отркыть записную книжку</string>
    <string name="btnSave">Сохранить</string>
    <string name="enter_note_text">Введите текст заметки</string>
    <string name="textUname">Имя пользователя</string>
    <string name="textUemail">Электронная почта</string>
    <string name="buttonOK">OK</string>
    <string name="buttonClear">Очистить</string>
    <string name="userName">Name</string>
    <string name="userEmail">uname@example.com</string>
    <string name="subscribeToNewsletter">Подписка на рассылку успешно оформлена для пользователя\t</string>
    <string name="toEmailAddress">\tна электронный адрес\t</string>
    <string name="btnBack">Назад</string>
    <string name="btnForward">Вперед</string>
    <string name="txtAdr">http://myfile.org/</string>
    <string name="progTitle">Комплексная система мониторинга здоровья</string>
    <string name="developer">Авдеев А.</string>
    <string name="fio">ФИО</string>
    <string name="age">Возраст</string>
    <string name="btn_pressure_pulse">Давление, пульс</string>
    <string name="btn_vitals">Жизненные показатели</string>
    <string name="btn_save">Сохранить</string>
    <string name="act_pressure_high_pressure">Верхнее давление</string>
    <string name="act_pressure_lower_pressure">Нижнее давление</string>
    <string name="act_pressure_pulse">Пульс</string>
    <string name="act_pressure_tachicardia">Сдвинуть при\nтахикардии</string>
    <string name="weight">Вес</string>
    <string name="walk">Шаги</string>
    <string name="main_invalid_input">Некорректно введены данные\n\tВ поле ФИО введите Фамилию и Инициалы,\n\tВ поле Возраст введите целое число.</string>
    <string name="pressure_invalid_input">Некорректно введены данные\n\t Значения давления и пульса должны быть целыми.</string>
    <string name="Not_all_values_are_entered">Не все значения введены</string>
    <string name="btn_ok">Ок</string>
    <string name="Enter_the_amount">Введите сумму</string>
    <string name="Enter_the_payment_description">Ввод информации об оплате</string>
    <string name="From_a_Bank_card">с банковской карты</string>
    <string name="From_mobile">с мобильного телефона</string>
    <string name="In_cash_at_the_address">наличными по адресу</string>
    <string name="paid">оплачено</string>
    <string name="Payment_method_not_selected">Не выбран способ оплаты</string>
    <string name="Payment_details_for_the_amount">Платежные реквизиты на сумму</string>
    <string name="used_to_pay_for">направлены для оплаты</string>
    <string name="Invalid_payment_amount">Неверная сумма платежа</string>
    <string name="Invalid_payment_attribute">Неверные атрибуты платежа</string>
    <string name="choice_the_country">Выбор страны</string>
    <string name="choice_the_city">Выбор города</string>
    <string name="choosing_a_house_number">Выбор номера дома</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белорусь</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Казань</item>
        <item>Нижний Новгород</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Брест</item>
        <item>Гродно</item>
    </string-array>
    <string name="chooseStartDate">Дата-время старта задачи:\t</string>
    <string name="chooseEndDate">Дата-время окончания задачи:\t</string>
    <string name="mistake">Ошибка</string>
    <string name="gross_error">Даты не введены</string>
</resources>