<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7F4D9"
    android:onClick="btnSaveClicked"
    tools:context=".Vitals">

    <TextView
        android:id="@+id/actVitalsTxtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vitalsEditTextWeight"
        app:layout_constraintEnd_toStartOf="@+id/vitalsEditTextWeight"
        app:layout_constraintTop_toTopOf="@+id/vitalsEditTextWeight"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/actVitalsTxtWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/walk"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vitalsEditTextSteps"
        app:layout_constraintEnd_toStartOf="@+id/vitalsEditTextSteps"
        app:layout_constraintTop_toTopOf="@+id/vitalsEditTextSteps"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/vitalsEditTextWeight"
        android:layout_width="155dp"
        android:layout_height="58dp"
        android:background="#E7FBE7"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/vitalsEditTextSteps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vitalsEditTextSteps"
        android:layout_width="155dp"
        android:layout_height="58dp"
        android:background="#E7FBE7"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVitalsSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitalsEditTextWeight" />

    <Button
        android:id="@+id/btnVitalsSave"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        android:background="#79EA7D"
        android:onClick="btnSaveClicked"
        android:text="@string/btn_save"
        android:textColor="#D8FAD9"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgScale"
        android:layout_width="81dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/vitalsEditTextWeight"
        app:layout_constraintStart_toEndOf="@+id/vitalsEditTextWeight"
        app:layout_constraintTop_toTopOf="@+id/vitalsEditTextWeight"
        app:layout_constraintVertical_bias="0.411"
        app:srcCompat="@mipmap/ic_scale" />

    <ImageView
        android:id="@+id/imgScale3"
        android:layout_width="81dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/vitalsEditTextSteps"
        app:layout_constraintStart_toEndOf="@+id/vitalsEditTextSteps"
        app:layout_constraintTop_toTopOf="@+id/vitalsEditTextSteps"
        app:layout_constraintVertical_bias="0.588"
        app:srcCompat="@mipmap/ic_walk" />

</androidx.constraintlayout.widget.ConstraintLayout>